# starling-store

./: .gitignore  README.md
1-data-input/: README.md
1-data-input/blob_cid_shard/: Cargo.toml  README.md
1-data-input/blob_cid_shard/output/: 06_2015_RF_Guttenfelder_00004_metadata.json  chunk_000.part  chunk_001.part  chunk_002.part
1-data-input/blob_cid_shard/src/: main.rs
1-data-input/starling-attestations/: sample-attestation.json
2-data-storage/: README.md
2-data-storage/akave-hot-storage/: Cargo.toml  README.md
2-data-storage/akave-hot-storage/src/: main.rs
2-data-storage/ipfs-pinata/: .env.example  Cargo.toml  README.md
2-data-storage/ipfs-pinata/src/: main.rs
3-data-security/: README.md
3-data-security/nexus-host/src/: main.rs
3-data-security/nexus-host/src/guest/src/: main.rs
3-data-security/nexus_zkvm/src/: main.rs
3-data-security/nexus_zkvm/src/guest/src/: main.rs
3-data-security/py_metadata_merkle/: README.md  metadata_merkle.py  requirements.txt
3-data-security/rust_exif_merkle/: 06_2015_RF_Guttenfelder_00004_merkle.json  Cargo.toml
3-data-security/rust_exif_merkle/src/: main.rs  merkle.rs
nexus-host/src/: main.rs
nexus-host/src/guest/src/: main.rs
rust_exif_reader/: Cargo.toml
rust_exif_reader/src/: main.rs
