[package]
name = "blob_cid_shard"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multihash = "0.19"
cid = "0.11"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
