[package]
name = "akave-hot-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.0"
aws-sdk-s3 = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
